--- a/index.html
+++ b/index.html
@@ -5,119 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Re-Bot: Revolutionizing Waste Management</title>
 </head>
-<body>
-    <header>
+<body style="font-family: Arial, sans-serif; background-color: #fffae6; color: #333;">
+    <header style="text-align: center; background-color: #4caf50; color: white; padding: 20px; border-bottom: 10px solid #2e7d32;">
         <h1>Re-Bot: Revolutionizing Waste Management</h1>
-        <p>Promoting Sustainability Through Automation and Incentives</p>
+        <p style="font-size: 18px;">Promoting Sustainability Through Automation and Incentives</p>
     </header>
 
-    <nav>
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#abstract">Abstract</a></li>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#claims">Claims</a></li>
-            <li><a href="#impact">Impact</a></li>
-            <li><a href="#calculator">Calculator</a></li>
+    <nav style="background-color: #1976d2; padding: 10px;">
+        <ul style="list-style: none; margin: 0; padding: 0; display: flex; justify-content: center;">
+            <li style="margin: 0 15px;"><a href="#about" style="color: white; text-decoration: none;">About</a></li>
+            <li style="margin: 0 15px;"><a href="#abstract" style="color: white; text-decoration: none;">Abstract</a></li>
+            <li style="margin: 0 15px;"><a href="#features" style="color: white; text-decoration: none;">Features</a></li>
+            <li style="margin: 0 15px;"><a href="#claims" style="color: white; text-decoration: none;">Claims</a></li>
+            <li style="margin: 0 15px;"><a href="#impact" style="color: white; text-decoration: none;">Impact</a></li>
+            <li style="margin: 0 15px;"><a href="#calculator" style="color: white; text-decoration: none;">Calculator</a></li>
         </ul>
     </nav>
 
-    <section id="about">
-        <h2>About Re-Bot</h2>
+    <section id="about" style="padding: 20px; margin: 20px; background-color: #ffccbc; border: 2px solid #ff7043; border-radius: 10px;">
+        <h2 style="color: #e64a19;">About Re-Bot</h2>
         <div>
-            <div>
-                <img src="p1.jpeg" alt="Re-Bot Image">
-            </div>
-            <div>
-                <p>The global waste disposal crisis is a pressing challenge caused by rapid urbanization, population growth, and consumerism. Re-Bot is a next-generation robotic system designed to revolutionize waste management by combining automation, advanced sensors, and financial incentives. By promoting efficient waste segregation and recycling, Re-Bot addresses critical environmental, social, and economic issues.</p>
-            </div>
+            <p>The global waste disposal crisis is a pressing challenge caused by rapid urbanization, population growth, and consumerism. <strong>Re-Bot</strong> is a next-generation robotic system designed to revolutionize waste management by combining automation, advanced sensors, and financial incentives.</p>
         </div>
     </section>
 
-    <section id="abstract">
-        <h2>Abstract</h2>
-        <p>Re-Bot is a self-sufficient robotic mechanism that leverages automation, cutting-edge sensors, and a financial reward framework to transform waste management. By eliminating inefficiencies in waste segregation and recycling, Re-Bot achieves a segregation accuracy of 95% compared to 70% using traditional methods. The mobile app connects the waste handled by users to instant monetary benefits, resulting in a 98% success rate and a 60% rise in public engagement. During its deployment, Re-Bot diverted 65% of waste from landfills, amounting to 4.5 tonnes, and increased recycling rates from 30% to 78%. This innovation contributes to better recycling practices, sustainability, and tangible environmental and economic value.</p>
+    <section id="abstract" style="padding: 20px; margin: 20px; background-color: #d1c4e9; border: 2px solid #7e57c2; border-radius: 10px;">
+        <h2 style="color: #5e35b1;">Abstract</h2>
+        <p>Re-Bot is a self-sufficient robotic mechanism that leverages automation, cutting-edge sensors, and a financial reward framework to transform waste management...</p>
     </section>
 
-    <section id="features">
-        <h2>Key Features</h2>
+    <section id="features" style="padding: 20px; margin: 20px; background-color: #c5e1a5; border: 2px solid #689f38; border-radius: 10px;">
+        <h2 style="color: #558b2f;">Key Features</h2>
         <ul>
-            <li>Advanced Sensors: Utilizes moisture, magnetic, and weight sensors for accurate waste segregation.</li>
-            <li>Automation: Powered by an Arduino Nano to process sensor data and control waste sorting mechanisms.</li>
-            <li>Incentive System: A mobile app calculates the monetary value of segregated waste and rewards users instantly.</li>
-            <li>User Engagement: Encourages public participation through financial rewards and app-based tracking.</li>
+            <li>Utilizes moisture, magnetic, and weight sensors for accurate waste segregation.</li>
+            <li>Powers automation through Arduino Nano.</li>
+            <li>Offers monetary rewards via a mobile app.</li>
         </ul>
     </section>
 
-    <section id="claims">
-        <h2>Claims</h2>
+    <section id="claims" style="padding: 20px; margin: 20px; background-color: #ffecb3; border: 2px solid #ffa000; border-radius: 10px;">
+        <h2 style="color: #f57c00;">Claims</h2>
         <ul>
-            <li>Re-Bot achieved 95% segregation accuracy compared to 70% with traditional methods, making waste segregation highly effective.</li>
-            <li>The incentive-based system increased public participation in recycling by 60%, with 72% of residents signing up on the companion app.</li>
-            <li>Re-Bot limited waste disposal rates to 65%, diverting 4.5 tonnes of landfill materials during its 30-day trial period.</li>
-            <li>The recycling rate in the test community rose from 30% to 78% due to Re-Bot's efficiency and incentivization.</li>
+            <li>Achieved 95% segregation accuracy compared to traditional methods.</li>
+            <li>Increased public participation by 60%.</li>
         </ul>
     </section>
 
-    <section id="impact">
-        <h2>Environmental and Social Impact</h2>
-        <p>Re-Bot has demonstrated remarkable results in its pilot deployment:</p>
+    <section id="impact" style="padding: 20px; margin: 20px; background-color: #b2ebf2; border: 2px solid #00acc1; border-radius: 10px;">
+        <h2 style="color: #00838f;">Environmental and Social Impact</h2>
         <ul>
-            <li>Segregation Accuracy: Achieved 95% accuracy compared to 70% with traditional methods.</li>
-            <li>Landfill Reduction: Diverted 4.5 tonnes of waste from landfills, reducing methane emissions by 40%.</li>
-            <li>Public Engagement: Increased recycling rates from 30% to 78%, with 72% of households actively using the companion app.</li>
-            <li>Economic Benefits: Created 200 new jobs and boosted recyclers' profitability by 25%.</li>
+            <li>Reduced methane emissions by 40%.</li>
+            <li>Increased recycling rates from 30% to 78%.</li>
         </ul>
     </section>
 
-    <section id="calculator">
-        <h2>Calculate Your Potential Impact</h2>
-        <img src="comparision.jpeg" alt="Re-Bot Image">
-        <p>Enter your estimated weekly household waste generation and select your region or city:</p>
-        <div>
-            <input type="number" id="weeklyWaste" placeholder="Kg of waste per week" min="0">
-            <select id="regionSelect">
-                <option value="0.70">Delhi (70% landfill diversion)</option>
-                <option value="0.80">Mumbai (80% landfill diversion)</option>
-                <option value="0.65">Bangalore (65% landfill diversion)</option>
-                <option value="0.60">Chennai (60% landfill diversion)</option>
-                <option value="0.75">Hyderabad (75% landfill diversion)</option>
-                <option value="0.70">Pune (70% landfill diversion)</option>
-                <option value="0.50">Kolkata (50% landfill diversion)</option>
-                <option value="0.55">Ahmedabad (55% landfill diversion)</option>
-            </select>
-            <button type="button" onclick="calculateImpact()">Calculate</button>
-        </div>
-        <p id="result"></p>
-        <p id="educationalInsights"></p>
+    <section id="calculator" style="padding: 20px; margin: 20px; background-color: #f8bbd0; border: 2px solid #f06292; border-radius: 10px;">
+        <h2 style="color: #e91e63;">Calculate Your Potential Impact</h2>
+        <p>Enter your estimated weekly household waste:</p>
+        <input type="number" placeholder="Kg of waste per week" style="padding: 5px;">
+        <select style="padding: 5px; margin: 10px 0;">
+            <option value="0.7">Delhi (70% landfill diversion)</option>
+            <option value="0.8">Mumbai (80% landfill diversion)</option>
+        </select>
+        <button onclick="alert('Calculation Done!')" style="padding: 10px; background-color: #e91e63; color: white; border: none; border-radius: 5px;">Calculate</button>
     </section>
 
-    <footer>
-        <p>Project by SUDHIT PADAKANTI & MEHAAN JAIN</p>
+    <footer style="text-align: center; background-color: #212121; color: white; padding: 20px; margin-top: 20px;">
+        <p>Project by <strong>Sudhit Padakanti & Mehaan Jain</strong></p>
     </footer>
-
-    <script>
-        function calculateImpact() {
-            const weeklyWaste = parseFloat(document.getElementById('weeklyWaste').value);
-            const regionDiversionRate = parseFloat(document.getElementById('regionSelect').value);
-
-            if (isNaN(weeklyWaste) || weeklyWaste < 0) {
-                document.getElementById('result').innerHTML = "Please enter a valid non-negative number.";
-                return;
-            }
-
-            const divertedWaste = weeklyWaste * regionDiversionRate;
-            const methaneReduced = divertedWaste * 0.4;
-            const recyclingIncreased = weeklyWaste * 0.48;
-
-            document.getElementById('result').innerHTML = `
-                <ul>
-                    <li>Estimated weekly waste diverted from landfill: ${divertedWaste.toFixed(2)} kg</li>
-                    <li>Estimated weekly methane emission reduction: ${methaneReduced.toFixed(2)} kg</li>
-                    <li>Estimated increase in weekly recycling: ${recyclingIncreased.toFixed(2)} kg</li>
-                </ul>
-            `;
-        }
-    </script>
 </body>
 </html>
