--- a/index.html
+++ b/index.html
@@ -4,38 +4,142 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Re-Bot: Revolutionizing Waste Management</title>
+    <style>
+        /* General Styles */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+
+        header {
+            text-align: center;
+            background-color: #4caf50;
+            color: white;
+            padding: 20px;
+            border-bottom: 5px solid #2e7d32;
+        }
+
+        nav {
+            background-color: #1976d2;
+            padding: 10px;
+        }
+
+        nav ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+        }
+
+        nav ul li {
+            margin: 0 15px;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        section {
+            padding: 20px;
+            margin: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        #about {
+            background-color: #ffccbc;
+            border: 2px solid #ff7043;
+        }
+
+        #abstract {
+            background-color: #d1c4e9;
+            border: 2px solid #7e57c2;
+        }
+
+        #features {
+            background-color: #c5e1a5;
+            border: 2px solid #689f38;
+        }
+
+        #claims {
+            background-color: #ffecb3;
+            border: 2px solid #ffa000;
+        }
+
+        #impact {
+            background-color: #b2ebf2;
+            border: 2px solid #00acc1;
+        }
+
+        #calculator {
+            background-color: #f8bbd0;
+            border: 2px solid #f06292;
+        }
+
+        footer {
+            text-align: center;
+            background-color: #212121;
+            color: white;
+            padding: 20px;
+            margin-top: 20px;
+        }
+
+        button {
+            padding: 10px 20px;
+            background-color: #e91e63;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #d81b60;
+        }
+
+        input, select {
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+    </style>
 </head>
-<body style="font-family: Arial, sans-serif; background-color: #fffae6; color: #333;">
-    <header style="text-align: center; background-color: #4caf50; color: white; padding: 20px; border-bottom: 10px solid #2e7d32;">
+<body>
+    <header>
         <h1>Re-Bot: Revolutionizing Waste Management</h1>
-        <p style="font-size: 18px;">Promoting Sustainability Through Automation and Incentives</p>
+        <p>Promoting Sustainability Through Automation and Incentives</p>
     </header>
 
-    <nav style="background-color: #1976d2; padding: 10px;">
-        <ul style="list-style: none; margin: 0; padding: 0; display: flex; justify-content: center;">
-            <li style="margin: 0 15px;"><a href="#about" style="color: white; text-decoration: none;">About</a></li>
-            <li style="margin: 0 15px;"><a href="#abstract" style="color: white; text-decoration: none;">Abstract</a></li>
-            <li style="margin: 0 15px;"><a href="#features" style="color: white; text-decoration: none;">Features</a></li>
-            <li style="margin: 0 15px;"><a href="#claims" style="color: white; text-decoration: none;">Claims</a></li>
-            <li style="margin: 0 15px;"><a href="#impact" style="color: white; text-decoration: none;">Impact</a></li>
-            <li style="margin: 0 15px;"><a href="#calculator" style="color: white; text-decoration: none;">Calculator</a></li>
+    <nav>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#abstract">Abstract</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#claims">Claims</a></li>
+            <li><a href="#impact">Impact</a></li>
+            <li><a href="#calculator">Calculator</a></li>
         </ul>
     </nav>
 
-    <section id="about" style="padding: 20px; margin: 20px; background-color: #ffccbc; border: 2px solid #ff7043; border-radius: 10px;">
-        <h2 style="color: #e64a19;">About Re-Bot</h2>
-        <div>
-            <p>The global waste disposal crisis is a pressing challenge caused by rapid urbanization, population growth, and consumerism. <strong>Re-Bot</strong> is a next-generation robotic system designed to revolutionize waste management by combining automation, advanced sensors, and financial incentives.</p>
-        </div>
+    <section id="about">
+        <h2>About Re-Bot</h2>
+        <p>The global waste disposal crisis is a pressing challenge caused by rapid urbanization, population growth, and consumerism. <strong>Re-Bot</strong> is a next-generation robotic system designed to revolutionize waste management by combining automation, advanced sensors, and financial incentives.</p>
     </section>
 
-    <section id="abstract" style="padding: 20px; margin: 20px; background-color: #d1c4e9; border: 2px solid #7e57c2; border-radius: 10px;">
-        <h2 style="color: #5e35b1;">Abstract</h2>
+    <section id="abstract">
+        <h2>Abstract</h2>
         <p>Re-Bot is a self-sufficient robotic mechanism that leverages automation, cutting-edge sensors, and a financial reward framework to transform waste management...</p>
     </section>
 
-    <section id="features" style="padding: 20px; margin: 20px; background-color: #c5e1a5; border: 2px solid #689f38; border-radius: 10px;">
-        <h2 style="color: #558b2f;">Key Features</h2>
+    <section id="features">
+        <h2>Key Features</h2>
         <ul>
             <li>Utilizes moisture, magnetic, and weight sensors for accurate waste segregation.</li>
             <li>Powers automation through Arduino Nano.</li>
@@ -43,34 +147,34 @@
         </ul>
     </section>
 
-    <section id="claims" style="padding: 20px; margin: 20px; background-color: #ffecb3; border: 2px solid #ffa000; border-radius: 10px;">
-        <h2 style="color: #f57c00;">Claims</h2>
+    <section id="claims">
+        <h2>Claims</h2>
         <ul>
             <li>Achieved 95% segregation accuracy compared to traditional methods.</li>
             <li>Increased public participation by 60%.</li>
         </ul>
     </section>
 
-    <section id="impact" style="padding: 20px; margin: 20px; background-color: #b2ebf2; border: 2px solid #00acc1; border-radius: 10px;">
-        <h2 style="color: #00838f;">Environmental and Social Impact</h2>
+    <section id="impact">
+        <h2>Environmental and Social Impact</h2>
         <ul>
             <li>Reduced methane emissions by 40%.</li>
             <li>Increased recycling rates from 30% to 78%.</li>
         </ul>
     </section>
 
-    <section id="calculator" style="padding: 20px; margin: 20px; background-color: #f8bbd0; border: 2px solid #f06292; border-radius: 10px;">
-        <h2 style="color: #e91e63;">Calculate Your Potential Impact</h2>
+    <section id="calculator">
+        <h2>Calculate Your Potential Impact</h2>
         <p>Enter your estimated weekly household waste:</p>
-        <input type="number" placeholder="Kg of waste per week" style="padding: 5px;">
-        <select style="padding: 5px; margin: 10px 0;">
+        <input type="number" placeholder="Kg of waste per week">
+        <select>
             <option value="0.7">Delhi (70% landfill diversion)</option>
             <option value="0.8">Mumbai (80% landfill diversion)</option>
         </select>
-        <button onclick="alert('Calculation Done!')" style="padding: 10px; background-color: #e91e63; color: white; border: none; border-radius: 5px;">Calculate</button>
+        <button onclick="alert('Calculation Done!')">Calculate</button>
     </section>
 
-    <footer style="text-align: center; background-color: #212121; color: white; padding: 20px; margin-top: 20px;">
+    <footer>
         <p>Project by <strong>Sudhit Padakanti & Mehaan Jain</strong></p>
     </footer>
 </body>
