--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     </section>
 
     <footer>
-        <p>Project by <strong>Sudhit Padakanti & Mehaan Jain</strong></p>
+        <p>Project by <strong>SUDHIT PADAKANTI & MEHAAN JAIN</strong></p>
     </footer>
 </body>
 </html>
