--- a/index.html
+++ b/index.html
@@ -194,8 +194,9 @@
         }
     </script>
 
-    <footer>
-        <p>&copy; 2025 Re-Bot. All Rights Reserved. Designed to promote sustainable living through innovation.</p>
+   <footer>
+        <p>Project by<h3>  SUDHIT PADAKANTI & MEHAAN JAIN</h3></p>
+        <p><i class="fa fa-spinner w3-spin" style="font-size:64px"></i></p>
     </footer>
 </body>
 </html>
