--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <body>
     <header style="background: #4bdbc354; color: rgb(16, 121, 56); text-align: center; padding: 1rem 0; background-image: url('path-to-waste-pattern.png'); background-repeat: repeat-x; background-position: top;">
         <h1>Re-Bot: Revolutionizing Waste Management</h1>
-        <p>Promoting Sustainability Through Automation and Incentives</p>
+        <p>Promoting Sustainability by segregation</p>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -85,6 +85,15 @@
                     <li class="nav-item"><a class="nav-link" href="#claims">Claims</a></li>
                     <li class="nav-item"><a class="nav-link" href="#impact">Impact</a></li>               
                     <li class="nav-item"><a class="nav-link" href="#calculator">Calculator</a></li>
+                    <button onclick="document.location='ViewPDF (1).pdf'">FORM 5</button>                
+                    <button onclick="document.location='ViewPDF (3).pdf'">FORM 1</button>                
+                    <button onclick="document.location='ViewPDF (4).pdf'">FORM 9</button>                
+                    <button onclick="document.location='ViewPDF (5).pdf'">FORM 26</button>                
+                    <button onclick="document.location='ViewPDF (7).pdf'">FORM 3</button>                
+                    <button onclick="document.location='ViewPDF.pdf'">FORM 2</button>                
+
+
+
                 </ul>
             </div>
         </div>
