--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <body>
     <header style="background: #4bdbc354; color: rgb(16, 121, 56); text-align: center; padding: 1rem 0; background-image: url('path-to-waste-pattern.png'); background-repeat: repeat-x; background-position: top;">
         <h1>Re-Bot: Revolutionizing Waste Management</h1>
-        <p>Promoting Sustainability by segregation</p>
+        <p>Promoting Sustainability by Segregation</p>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
