--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                     <li class="nav-item"><a class="nav-link" href="#claims">Claims</a></li>
                     <li class="nav-item"><a class="nav-link" href="#impact">Impact</a></li>               
                     <li class="nav-item"><a class="nav-link" href="#calculator">Calculator</a></li>
+                    <li class="nav-item"><a class="nav-link" href="# ">PATENTS FILES</a></li>
                     <button onclick="document.location='ViewPDF (3).pdf'">FORM 1</button>                
                     <button onclick="document.location='ViewPDF.pdf'">FORM 2</button>                
                     <button onclick="document.location='ViewPDF (7).pdf'">FORM 3</button>                
