--- a/index.html
+++ b/index.html
@@ -19,6 +19,23 @@
             background-size: cover;
             background-attachment: fixed;
         }
+        .btn {
+            background: linear-gradient(45deg, #ff6b6b, #ffcc5c);
+            border: none;
+            padding: 15px 30px;
+            font-size: 18px;
+            font-weight: bold;
+            color: white;
+            border-radius: 30px;
+            cursor: pointer;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+            transition: all 0.3s ease-in-out;
+        }
+        .btn:hover {
+            background: linear-gradient(45deg, #ffcc5c, #ff6b6b);
+            transform: scale(1.1);
+            box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.3);
+        }
         header {
             background: rgba(40, 167, 69, 0.8); /* Green overlay */
             color: white;
@@ -91,7 +108,9 @@
                     <button onclick="document.location='ViewPDF (7).pdf'">FORM 3</button>                
                     <button onclick="document.location='ViewPDF (1).pdf'">FORM 5</button>                
                     <button onclick="document.location='ViewPDF (4).pdf'">FORM 9</button>                
-                    <button onclick="document.location='ViewPDF (5).pdf'">FORM 26</button>                
+                    <button onclick="document.location='ViewPDF (5).pdf'">FORM 26</button>
+                    <button class="btn" onclick="window.location.href='ViewPDF (5).pdf'">FORM 26</button>
+
 
 
 
