--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
                     <li class="nav-item"><a class="nav-link" href="#impact">Impact</a></li>               
                     <li class="nav-item"><a class="nav-link" href="#calculator">Calculator</a></li>
                     <li class="nav-item"><a class="nav-link" href="">PATENTS FILES --></a></li>
-                    <button class="btn"onclick="document.location='ViewPDF (3).pdf'">FORM 1</button>                
-                    <button class="btn"onclick="document.location='ViewPDF.pdf'">FORM 2</button>                
-                    <button class="btn"onclick="document.location='ViewPDF (7).pdf'">FORM 3</button>                
-                    <button class="btn"onclick="document.location='ViewPDF (1).pdf'">FORM 5</button>                
-                    <button class="btn"onclick="document.location='ViewPDF (4).pdf'">FORM 9</button>                
+                    <button class="btn" onclick="document.location='ViewPDF (3).pdf'">FORM 1</button>                
+                    <button class="btn" onclick="document.location='ViewPDF.pdf'">FORM 2</button>                
+                    <button class="btn" onclick="window.location.href='ViewPDF (7).pdf'">FORM 3</button>                
+                    <button class="btn" onclick="window.location.href='ViewPDF (1).pdf'">FORM 5</button>                
+                    <button class="btn" onclick="window.location.href='ViewPDF (4).pdf'">FORM 9</button>                
                     <button class="btn" onclick="window.location.href='ViewPDF (5).pdf'">FORM 26</button>
 
 
