--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <li class="nav-item"><a class="nav-link" href="#claims">Claims</a></li>
                     <li class="nav-item"><a class="nav-link" href="#impact">Impact</a></li>               
                     <li class="nav-item"><a class="nav-link" href="#calculator">Calculator</a></li>
-                    <li class="nav-item"><a class="nav-link" href="">PATENTS FILES --></a></li>
+                    <li class="nav-item"><a class="nav-link" href="">PATENT FILES --></a></li>
                     <button class="btn" onclick="document.location='ViewPDF (3).pdf'">FORM 1</button>                
                     <button class="btn" onclick="document.location='ViewPDF.pdf'">FORM 2</button>                
                     <button class="btn" onclick="window.location.href='ViewPDF (7).pdf'">FORM 3</button>                
